--- a/Ejercicio 6/CSS/style.css
+++ b/Ejercicio 6/CSS/style.css
@@ -1,8 +1,46 @@
+
+
 body {
     margin: 50px;
     margin-top: 0;
     padding: 0;
     font: verdana;
+}
+
+.header {
+    background-color: #ffffff;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    width: 50px;
+}
+
+.logo img {
+    width: 300px; 
+    height: auto;
+    margin-right: 10px;
+}
+
+.social-icon {
+    width: 30px; 
+    height: auto;
+    margin-left: 15px; 
+}
+
+.title {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
+.slogan {
+    font-size: 16px;
+    color: #666;
 }
 
 nav {
@@ -80,35 +118,47 @@ header{
     display: flex;
     margin-top: 0px;
     margin: auto ;
+    
 }
 
 .card1{
     flex: 1;
+    margin: 0px;
+    color: white;
     text-align: center;
 }
 
 .div1{
-    
-    background-color: #c4d434;
+    flex-grow: 0.5;
+    padding-top: 50px;
+    background-color: #ffffff;
     flex-direction: column;
+    color: black;
     
 }
 
 .div2{
-    background-color: blue;
+    
+    padding-top: 50px;
+    background-color:  #5ccce4;
     flex-direction: row;
+   
 }
 
-.div2 img{
-    width: 20px;
+.div3 {
+    display: flex;
+    justify-content: space-between;
+    
 }
 
-.EduDema{
-    background-color: rgb(185, 183, 183);
-    flex-direction: column;
+.left{
+    flex-grow: 0.86;
+    padding: 85px;
+    background-color:    #939393f6    ;
+    justify-content: space-between;
 }
 
-.blog{
-    background-color: grey;
-    flex-direction: row;
+.rigth{
+    padding: 50px;
+    background-color:  #dcdcdc ;
 }
