--- a/Nuevaroberto/css/style.css
+++ b/Nuevaroberto/css/style.css
@@ -223,3 +223,136 @@ max-height: auto;
     background-color:  #7a7a7a ;
     text-align: center;
 }
+.container7 {
+    display: flex;
+    justify-content: space-between;
+    
+  }
+  
+  .left-column {
+    background-color: #f2f2f2;
+    padding-top: 50px;  
+  }
+  
+  .right-column {
+    background-color: #ff4500;
+    color: white;
+    width: 86%;
+   
+  }
+  
+  .left-column h2,
+  .right-column h2 {
+    margin-top: 0;
+  }
+  
+  .form-group {
+    margin-bottom: 0;
+    text-align: center;
+  }
+  
+  
+  .form-group label {
+    display: block;
+    margin-bottom: 0;
+    text-align: center;
+  }
+  
+  
+  .form-group input {
+    width: 90%;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-align: center;
+  }
+  
+  .left-column button {
+    background-color: #ff4500;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+  }
+
+  .pie{
+
+    background-color: #00aaff ;
+  }
+
+  footer {
+    background-color: #000;
+    color: #fff;
+    padding: 40px 0;
+  }
+  
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  
+  .promou,
+  .navega,
+  .segueix-nos,
+  .aliances {
+    flex-basis: 25%;
+  }
+  
+  .navega h3,
+  .segueix-nos h3 {
+    margin-bottom: 20px;
+  }
+  
+  .navega ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .navega ul li a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .social-icons a {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    background-size: contain;
+    margin-right: 10px;
+  }
+  
+  .twitter-icon {
+    background-image: url('./twitter.png');
+  }
+  
+  .facebook-icon {
+    background-image: url('./facebook.png');
+  }
+  
+  .youtube-icon {
+    background-image: url('./youtube.png');
+  }
+  
+  .flickr-icon {
+    background-image: url('./slideshare.png');
+  }
+  
+  .rss-icon {
+    background-image: url('./storify-footer.png');
+  }
+  
+  .legal-info {
+    text-align: center;
+    margin-top: 40px;
+  }
+  
+  .legal-info a {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
+  }
+  
